--- a/diplom_reliz/WindowFolder/AddProviderWindow.xaml
+++ b/diplom_reliz/WindowFolder/AddProviderWindow.xaml
@@ -7,107 +7,68 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStartupLocation="CenterScreen"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
-         WindowStyle="None"
-        Title="AddUserWindow" Height="550" Width="552" MaxHeight="550" MinHeight="550" MaxWidth="552" MinWidth="550">
-    <Grid Margin="0,0,-47,0" Background="#FF88B6D6">
+        mc:Ignorable="d" 
+      d:DesignHeight="530" d:DesignWidth="680" MaxHeight="530" MinHeight="530" MaxWidth="680" MinWidth="680"
+      Title="TestPage2"
+      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+      TextElement.FontSize="20"
+      FontFamily="Cascadia Code">
 
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="185*"/>
-            <RowDefinition Height="96*"/>
-            <RowDefinition Height="96*"/>
-            <RowDefinition Height="86*"/>
-            <RowDefinition Height="56*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Добавление поставщика"
-                       x:Name="DialogTitleTb"
-                       TextWrapping="Wrap"
-                       TextAlignment="Center"
-                       FontWeight="SemiBold"
-                       FontSize="24" Margin="87,10,163,136" />
-
-        <materialDesign:PackIcon Kind="DeliveryDining" Width="342" Height="131" Foreground="Black" VerticalAlignment="Center" Margin="82,57,0,5"/>
-
-        <Button
-        Tag="Plus" Content="Добавить"
-        x:Name="FormBtn" Height="Auto"
-        Margin="188,10,235,16" Grid.Row="4"/>
-
-
-        <TextBox x:Name="Tb1" HorizontalAlignment="Left" Height="28" Margin="10,62,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" materialDesign:HintAssist.Hint="Юр. Адресс" 
-                             Foreground="Black" VerticalContentAlignment="Center"
-                             ToolTip="Введите логин" Background="{x:Null}" />
-
-        <TextBox x:Name="Tb2" HorizontalAlignment="Left" Height="28" Margin="10,62,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" materialDesign:HintAssist.Hint="Название поставщика" 
-                             Foreground="Black" VerticalContentAlignment="Center"
-                             ToolTip="Введите Название" Background="{x:Null}" RenderTransformOrigin="0.556,0.821" />
 
 
 
-        <ComboBox x:Name="Cb1" HorizontalAlignment="Left" Margin="398,65,0,0" Grid.Row="2" VerticalAlignment="Top" Width="155" materialDesign:HintAssist.Hint="Активный/Не активный"
-                    SelectedValuePath="IdRole"
-                  SelectedItem="{Binding Role}"
-                  DisplayMemberPath="NameRole" Background="{x:Null}" Height="25"/>
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="1" Grid.RowSpan="4">
 
-        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top"
-                            Orientation="Horizontal" Height="24" Width="34" Margin="0,0,47,0">
-            <Button Style="{StaticResource MaterialDesignIconForegroundButton}"
-                            Height="24"
-                            Margin="8 0 0 0"
-                            Width="22"
-                            Content="{md:PackIcon Kind=Close}" Background="White" Click="Button_Click"/>
+            <Label Content="Новый поставщик" Grid.Row="1" Grid.Column="1" FontSize="30" Height="60" HorizontalAlignment="Center"/>
+
+            <Border Height="2" Background="Black"/>
+
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <Label Content="Название" FontSize="20"/>
+                    <TextBox x:Name="Tb1" Width="240" Height="40" BorderBrush="#FF939393"/>
+
+                    <Label Content="Адресс" FontSize="20"/>
+                    <TextBox x:Name="Tb2" Width="240" Height="40" BorderBrush="#FF939393"/>
+                    <Label Content="Телефон" FontSize="20"/>
+                    <TextBox x:Name="Tb3" Width="240" Height="40" BorderBrush="#FF939393"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <Label Content="Почта" FontSize="20"/>
+                    <TextBox x:Name="Cb1" Width="240" Height="40" BorderBrush="#FF939393"/>
+                    <Label Content="Сайт" FontSize="20"/>
+                    <TextBox x:Name="Cb2" Width="240" Height="40" BorderBrush="#FF939393"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Vertical" Margin="10"/>
+            </StackPanel>
+
+            <Border Height="2" Background="Black"/>
+
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical" Margin="10"/>
+
+                <StackPanel Orientation="Vertical" />
+            </StackPanel>
+
+            <Button Width="260" Height="60" ToolTip="Нажмите чтобы добавить" x:Name="btnAdd" BorderBrush="{x:Null}" Background="#FFD47AE8" 
+        Content="Добавить" Foreground="White" VerticalAlignment="Bottom" FontSize="20" Margin="30" Click="btnAdd_Click"/>
+
         </StackPanel>
-        <TextBox x:Name="Tb2_Copy" HorizontalAlignment="Left" Height="28" Margin="192,62,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" md:HintAssist.Hint="Контактный номер" 
-            Foreground="Black" VerticalContentAlignment="Center"
-            ToolTip="Введите пароль" Background="{x:Null}" RenderTransformOrigin="0.556,0.821" />
-        <TextBox x:Name="Tb2_Copy1" HorizontalAlignment="Left" Height="28" Margin="192,62,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" md:HintAssist.Hint="Действующая почта" 
-            Foreground="Black" VerticalContentAlignment="Center"
-            ToolTip="Введите пароль" Background="{x:Null}" RenderTransformOrigin="0.556,0.821" />
-        <TextBox x:Name="Tb2_Copy2" HorizontalAlignment="Left" Height="28" Margin="398,62,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" md:HintAssist.Hint="Рабочий сайт" 
-            Foreground="Black" VerticalContentAlignment="Center"
-            ToolTip="Введите пароль" Background="{x:Null}" RenderTransformOrigin="0.556,0.821" />
-
-        <TextBlock Text="Название"
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="18" Margin="10,10,419,43" Grid.Row="1" />
-        <TextBlock Text="Телефон"
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="18" Margin="194,10,235,43" Grid.Row="1" />
-        <TextBlock Text="Сайт"
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="18" Margin="398,10,31,43" Grid.Row="1" />
-        <TextBlock Text="Адресс"
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="18" Margin="10,10,419,43" Grid.Row="2" />
-        <TextBlock Text="Почта"
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="18" Margin="192,10,237,43" Grid.Row="2" />
-        <TextBlock Text="Статус"
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="18" Margin="398,10,31,43" Grid.Row="2" />
-
-
-
-
-
-
-
 
     </Grid>
 </Window>
