--- a/diplom_reliz/PagesFolder/ProviderPage.xaml
+++ b/diplom_reliz/PagesFolder/ProviderPage.xaml
@@ -4,38 +4,29 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:diplom_reliz.PagesFolder"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProviderPage">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="600*"/>
-            <ColumnDefinition Width="104*"/>
-            <ColumnDefinition Width="90*"/>
-            <ColumnDefinition Width="7*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="203*"/>
-            <RowDefinition Height="20*"/>
-            <RowDefinition Height="2*"/>
-        </Grid.RowDefinitions>
-
         <Button
-         Content="Добавить"
-         Margin="8,10,3.5,6" Height="24" Width="78" Click="Button_Click" FontSize="6" Grid.Row="1" Grid.Column="2"/>
+         Content="Добавить" x:Name="Add_Provider"
+         Margin="660,-52,100,580" Height="24" Width="78" FontSize="10" Background="#FDB900FF" BorderBrush="{x:Null}" Foreground="#DDFFFFFF" Click="Add_Provider_Click"/>
         <Button
-         Content="Редактировать"
-         Margin="16,10,10,6" Height="24" Width="78" FontSize="6" Grid.Row="1" Grid.Column="1"/>
+            Content="Удалить" x:Name="Deleted_Provider"
+            Margin="730,-52,-15,580" Height="24" Width="78" FontSize="10" Background="#FDB900FF" BorderBrush="{x:Null}" Foreground="#DDFFFFFF" Click="Deleted_Provider_Click"/>
 
         <DataGrid x:Name="ListSupplierDG"
                   Foreground="White"
+                  RowStyle="{StaticResource CustomDataGridRowStyle}"
         AutoGenerateColumns="False"
         IsReadOnly="True"
-        ItemsSource="{Binding Supplier}" Margin="10,10,3.5,1" FontSize="15" Grid.ColumnSpan="3">
+        ItemsSource="{Binding Supplier}" Margin="10,71,10,10" FontSize="15" Grid.ColumnSpan="4">
             <DataGrid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF041AFF" Offset="0"/>
+                    <GradientStop Color="#FFD101FF" Offset="0"/>
                     <GradientStop Color="#FD00E8FF" Offset="1"/>
                 </LinearGradientBrush>
             </DataGrid.Background>
@@ -64,7 +55,8 @@
 
             </DataGrid.Columns>
         </DataGrid>
-
-
+        <TextBox x:Name="SearchTb" VerticalContentAlignment="Center" FontSize="20"  HorizontalAlignment="Left" BorderThickness="0" Style="{StaticResource RoundedTextBox}" md:HintAssist.Hint="Поиск"  Height="35" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" TextChanged="SearchTb_TextChanged" Background="#FD00E8FF" BorderBrush="Black" Foreground="Black" Margin="535,25,-35,0"/>
+        <materialDesign:PackIcon Kind="Search" Width="35" Height="35" Foreground="White" VerticalAlignment="Center" Margin="800,-160,-800,400"/>
+        
     </Grid>
 </Page>
