--- a/diplom_reliz/WindowFolder/AddPurchasesWindow.xaml
+++ b/diplom_reliz/WindowFolder/AddPurchasesWindow.xaml
@@ -7,77 +7,87 @@
           xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStartupLocation="CenterScreen"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
-         WindowStyle="None"
-        Title="AddUserWindow" Height="550" Width="552" MinHeight="550" MaxHeight="550" MinWidth="552" MaxWidth="552">
-    <Grid Margin="0,0,-8,-8" Background="#FF88B6D6">
+         mc:Ignorable="d" 
+      d:DesignHeight="430" d:DesignWidth="980" MaxHeight="630" MinHeight="630" MaxWidth="980" MinWidth="980"
+      Title="TestPage2"
+      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+      TextElement.FontSize="20"
+      FontFamily="Cascadia Code">
 
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="283*"/>
-            <RowDefinition Height="150*"/>
-            <RowDefinition Height="30*"/>
-            <RowDefinition Height="28*"/>
-            <RowDefinition Height="59*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock
-                       x:Name="DialogTitleTb"
-                       TextWrapping="Wrap"
-                       TextAlignment="Center"
-                       FontWeight="SemiBold"
-                       FontSize="24" Margin="132,10,118,136" ><Run Text="Добавление закупки"/><Run/></TextBlock>
 
-        <materialDesign:PackIcon Kind="Cart" Width="342" Height="130" Foreground="Black" VerticalAlignment="Center" Margin="109,93,0,60"/>
 
-        <Button
-        Tag="Plus" Content="Добавить"
-        x:Name="FormBtn" Height="Auto"
-        Margin="220,16,204,10" Grid.Row="4"/>
 
-        <ComboBox  HorizontalAlignment="Left" Margin="16,65,0,0" Grid.Row="1" VerticalAlignment="Top" Width="142" materialDesign:HintAssist.Hint="Выберите поставщика"
-                  SelectedValuePath=""
-                  SelectedItem="{Binding Role}"
-                  DisplayMemberPath="NameRole" Background="{x:Null}"/>
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Width="810">
 
-        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top"
-                            Orientation="Horizontal" Height="24" Width="37">
-            <Button Style="{StaticResource MaterialDesignIconForegroundButton}"
-                            Height="24"
-                            Margin="8 0 0 0"
-                            Width="22"
-                            Content="{md:PackIcon Kind=Close}" Background="White" Click="Button_Click" />
+            <Label Content="Новая закупка" Grid.Row="1" Grid.Column="1" FontSize="30" Height="60" HorizontalAlignment="Center"/>
+
+            <Border Height="2" Background="Black"/>
+
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <Label Content="Дата закупки" FontSize="20"/>
+                    <DatePicker x:Name="Tb1" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                    <Label Content="Описание" FontSize="20"/>
+                    <TextBox x:Name="Tb2" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                    <Label Content="Сумма закупки" FontSize="20"/>
+                    <TextBox x:Name="Tb3" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                    <Label Content="Кол-во товара" FontSize="20"/>
+                    <TextBox x:Name="Tb4" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <Label Content="Поставщик" FontSize="20"/>
+                    <ComboBox x:Name="Cb1" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                    <Label Content="Товар" FontSize="20"/>
+                    <ComboBox x:Name="Tb5" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                    <Label Content="Дата доставки" FontSize="20"/>
+                    <DatePicker x:Name="Tb6" Width="240" Height="40" BorderBrush="#FFABADB3" />
+
+                    <Label Content="Способ доставки" FontSize="20"/>
+                    <ComboBox x:Name="Tb7" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                </StackPanel>
+
+
+
+                <StackPanel Orientation="Vertical" Margin="10">
+
+                    <Label Content="Способ оплаты" FontSize="20"/>
+                    <ComboBox x:Name="Tb8" Width="240" Height="40" BorderBrush="#FFABADB3"/>
+
+                </StackPanel>
+            </StackPanel>
+
+            <Border Height="2" Background="Black"/>
+
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical" Margin="10"/>
+
+                <StackPanel Orientation="Vertical" />
+            </StackPanel>
+
+            <Button Width="260" Height="60" ToolTip="Нажмите чтобы добавить" x:Name="btnAdd" BorderBrush="{x:Null}" Background="#FFD47AE8" 
+        Content="Добавить" Foreground="White" VerticalAlignment="Bottom" FontSize="20" Margin="275,30" Click="btnAdd_Click"/>
+
         </StackPanel>
-        <TextBox x:Name="Tb2_Copy" HorizontalAlignment="Left" Height="28" Margin="192,62,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" md:HintAssist.Hint="Сколько нужно товара" 
-            Foreground="Black" VerticalContentAlignment="Center"
-            ToolTip="Введите пароль" Background="{x:Null}" RenderTransformOrigin="0.556,0.821" />
-        <TextBox x:Name="Tb2_Copy2" HorizontalAlignment="Left" Height="28" Margin="398,62,-1,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="155" md:HintAssist.Hint="Почта для связи" 
-            Foreground="Black" VerticalContentAlignment="Center"
-            ToolTip="Введите пароль" Background="{x:Null}" RenderTransformOrigin="0.556,0.821" />
-        <TextBlock
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="20" Margin="10,10,418,62" Grid.Row="1" ><Run Text="Поставщик"/><Run/></TextBlock>
-        <TextBlock
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="20" Margin="192,10,223,62" Grid.Row="1" Text="Описание" />
-        <TextBlock
-            TextWrapping="Wrap"
-            TextAlignment="Left"
-            FontWeight="SemiBold"
-            FontSize="20" Margin="398,10,30,62" Grid.Row="1" Text="Цена" />
-
-
-
-
-
-
-
 
     </Grid>
-</Window>
+    </Window>
