--- a/diplom_reliz/WindowFolder/AdminWindow2.xaml
+++ b/diplom_reliz/WindowFolder/AdminWindow2.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="diplom_reliz.WindowFolder.ZakupchikWindow"
+﻿<Window x:Class="diplom_reliz.WindowFolder.AdminWindow2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:diplom_reliz.WindowFolder"
-         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStartupLocation="CenterScreen"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStyle="None"
@@ -34,14 +34,14 @@
 
 
         <Frame Content="" x:Name="MainFrame"
-       NavigationUIVisibility="Hidden" Margin="266,90,10,0"/>
+       NavigationUIVisibility="Hidden" Margin="266,90,10,10"/>
 
         <StackPanel Width="248" HorizontalAlignment="Left" Margin="0,0,0,10">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5,5,0,5">
-                <materialDesign:PackIcon Kind="User"  Width="70" Height="65" Foreground="#FF7A1DFF"  Margin="10 10"  />
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,5,0,5">
+                <md:PackIcon Kind="User"  Width="70" Height="65" Foreground="#FF7A1DFF"  Margin="10 10"  />
                 <StackPanel>
-                    <TextBlock  x:Name="LoginLabel" Foreground="#FF7A1DFF" Width="130" VerticalAlignment="Center" FontSize="30"/>
-                    <TextBlock  x:Name="RoleLabel" Foreground="#FF7A1DFF" Width="130" VerticalAlignment="Center" FontSize="18"/>
+                    <TextBlock x:Name="LoginLabel" Foreground="#FF7A1DFF" Width="130" VerticalAlignment="Center" FontSize="30"/>
+                    <TextBlock x:Name="RoleLabel"  Foreground="#FF7A1DFF" Width="130" VerticalAlignment="Center" FontSize="18"/>
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10">
@@ -50,20 +50,23 @@
                          Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Purchases" Click="Purchases_Click" Background="{x:Null}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 5">
-                <materialDesign:PackIcon Kind="Purse" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
-                <Button Margin="10 5" Content="Товары" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
-                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Products" Click="Products_Click" Background="{x:Null}" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 5">
                 <materialDesign:PackIcon Kind="Car" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
                 <Button Margin="10 5" Content="Доставка" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
                          Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Delivery" Click="Delivery_Click" Background="{x:Null}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 5">
-                <materialDesign:PackIcon Kind="DeliveryDining" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
-                <Button Margin="10 5" Content="Поставщик" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
-                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Provider" Click="Provider_Click" Background="{x:Null}"/>
+                <materialDesign:PackIcon Kind="ListBox" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
+                <Button Margin="10 5" Content="Заказы" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
+                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Orders" Click="Orders_Click" Background="{x:Null}" />
             </StackPanel>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 5">
+                <materialDesign:PackIcon Kind="Money" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
+                <Button Margin="10 5" Content="Платежи" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
+                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Payments" Click="Payments_Click" Background="{x:Null}" />
+            </StackPanel>
+
+
+
         </StackPanel>
 
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top"
@@ -82,7 +85,7 @@
             <Button Style="{StaticResource MaterialDesignIconForegroundButton}"
                             Height="24"
                             Margin="8 0 0 0"
-                            Width="24"                       
+                            Width="24"
                             Content="{materialDesign:PackIcon Kind=Close}" Background="White" Click="Button_Click_2"/>
         </StackPanel>
 
