--- a/diplom_reliz/WindowFolder/ManagerWindow.xaml
+++ b/diplom_reliz/WindowFolder/ManagerWindow.xaml
@@ -28,7 +28,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="/diplom_reliz;component/ResoureceFolder/Window2.png"/>
+            <ImageBrush ImageSource="/diplom_reliz;component/ResoureceFolder/Window3.png"/>
         </Grid.Background>
 
 
@@ -38,21 +38,21 @@
 
         <StackPanel Width="248" HorizontalAlignment="Left" Margin="0,0,0,10">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5,5,0,5">
-                <materialDesign:PackIcon Kind="User"  Width="70" Height="65" Foreground="White"  Margin="10 10"  />
+                <materialDesign:PackIcon Kind="User"  Width="70" Height="65" Foreground="#FF7A1DFF"  Margin="10 10"  />
                 <StackPanel>
-                    <TextBlock x:Name="LoginLabel" Foreground="White" Width="130" VerticalAlignment="Center" FontSize="30"/>
-                    <TextBlock  x:Name="RoleLabel" Foreground="White" Width="130" VerticalAlignment="Center" FontSize="18"/>
+                    <TextBlock x:Name="LoginLabel" Foreground="#FF7A1DFF" Width="130" VerticalAlignment="Center" FontSize="30"/>
+                    <TextBlock  x:Name="RoleLabel" Foreground="#FF7A1DFF" Width="130" VerticalAlignment="Center" FontSize="18"/>
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 5">
                 <materialDesign:PackIcon Kind="ListBox" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
                 <Button Margin="10 5" Content="Заказы" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
-                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Orders" Click="Orders_Click" />
+                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Orders" Click="Orders_Click" Background="{x:Null}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 5">
                 <materialDesign:PackIcon Kind="Money" Width="60" Height="50" Foreground="White" VerticalAlignment="Center"/>
                 <Button Margin="10 5" Content="Платежи" Width="180" VerticalAlignment="Center" HorizontalContentAlignment="Left" FontSize="25"
-                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Payments" Click="Payments_Click" />
+                         Style="{StaticResource NormalButtonStyle}" Height="56" x:Name="Payments" Click="Payments_Click" Background="{x:Null}" />
             </StackPanel>
         </StackPanel>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top"
